Closure_104/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_104_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java:372: error: incompatible types: NoType cannot be converted to UnionType
      NoObjectType noObjectType1 = (NoObjectType)unionType0.meet(noType0);
                                                                 ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java:383: error: meet(UnionType) has private access in UnionType
      JSType jSType0 = unionType0.meet(unionType0);
                                 ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java:395: error: meet(UnionType) has private access in UnionType
      JSType jSType0 = unionType0.meet(unionType0);
                                 ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java:407: error: meet(UnionType) has private access in UnionType
      JSType jSType0 = unionType0.meet(unionType0);
                                 ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java:420: error: incompatible types: NoObjectType cannot be converted to UnionType
      unionType0.meet(noObjectType0);
                      ^
/home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java:431: error: incompatible types: VoidType cannot be converted to UnionType
      JSType jSType0 = unionType0.meet(voidType0);
                                       ^
Note: /home/liumengjiao/Desktop/CI/Evosuite/Closure_104/Closure/evosuite/3/com/google/javascript/rhino/jstype/UnionType_ESTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors
